[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Dog/Dog.gd" type="Script" id=1]
[ext_resource path="res://scenes/Bullet/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/dog_still.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "left",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.6691, 12.7038 )

[node name="Dog" type="Area2D"]
script = ExtResource( 1 )
Bullet = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.33592, -0.655769 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
